# HopTerm

./: .gitignore  Cargo.toml  README.md
crates/app/: Cargo.toml
crates/app/src/: demo.rs  lib.rs  mock.rs
crates/app/tests/: live.rs  pipeline.rs  seed.rs
crates/domain/: Cargo.toml
crates/domain/src/: entities.rs  error.rs  lib.rs  terminal.rs  traits.rs
crates/logging/: Cargo.toml
crates/logging/src/: lib.rs
crates/security/: Cargo.toml
crates/security/src/: fingerprint.rs  lib.rs
crates/ssh/: Cargo.toml
crates/ssh/src/: lib.rs  shell.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
crates/terminal/: Cargo.toml
crates/terminal/src/: lib.rs
crates/transfer/: Cargo.toml
crates/transfer/src/: lib.rs
crates/ui/: Cargo.toml
crates/ui/src/: backend.rs  main.rs
crates/ui/web/: index.html
docs/: ARCHITECTURE.md  CRATES.md  DATA_MODEL.md  DEPENDENCIES.md  ROADMAP.md  TRAITS.md  UI_FLOW.md
packaging/: README.md  hopterm.desktop  make-deb.sh
