[package]
name = "hopterm-logging"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Tracing init and secret-redaction helpers for HopTerm (spec §11)."

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
directories = { workspace = true }
