[package]
name = "hopterm-transfer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "SFTP-over-SSH file transfer for HopTerm (spec §5.5)."

[dependencies]
hopterm-domain = { workspace = true }
russh-sftp = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
