[package]
name = "hopterm-ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "HopTerm desktop GUI: wry webview rendering the design, wired to the backend."

[[bin]]
name = "hopterm"
path = "src/main.rs"

[dependencies]
hopterm-domain = { workspace = true }
hopterm-app = { workspace = true }
hopterm-security = { workspace = true }
hopterm-logging = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = "1"
base64 = { workspace = true }
arboard = "3"
wry = "0.55"
tao = "0.34"
flate2 = "1"
tar = "0.4"
